--- a/_posts/2018-10-02-Blog 开通啦.md
+++ b/_posts/2018-10-02-Blog 开通啦.md
@@ -4,7 +4,7 @@ title:      Blog 开通啦
 subtitle:   与国同庆git开博
 date:       2018-10-01
 author:     yxy
-header-img: img/post-bg-ios9-web.jpg
+header-img: img/post-SJTU-red.jpg
 catalog: true
 tags:
     - daily
