--- a/_posts/2018-10-02-Blog-开通啦.md
+++ b/_posts/2018-10-02-Blog-开通啦.md
@@ -4,12 +4,15 @@ title:      Blog 开通啦
 subtitle:   与国同庆git开博
 date:       2018-10-01
 author:     yxy
-header-img: img/post-SJTU-red.jpg
+header-img: img/post-bg-gate.jpg
 catalog: true
 tags:
-    - daily
+	- daily
 	- test
 ---
+
+# First Post
+
 三十而立，与国同庆，即兴开博，继往开来。
 
 暂时搭了个框架，没有时间打磨细节，还未完成的事情如下（TODO）：
