--- a/_posts/2018-10-02-Blog-开通啦.md
+++ b/_posts/2018-10-02-Blog-开通啦.md
@@ -1,14 +1,14 @@
 ---
-layout:     post
-title:      iOS手势与变形
-subtitle:   手势与变形基础知识笔记
-date:       2016-10-10
-author:     BY
-header-img: img/post-bg-ios9-web.jpg
+layout:      post
+title:       Blog开通惹
+subtitle:    与国同庆git开博
+date:        2018-10-01
+author:      yxy
+header-img:  img/post-bg-gate.jpg
 catalog: true
 tags:
-    - iOS
-    - iOS开发基础
+	- daily
+	- test
 ---
 
 
