--- a/_posts/2018-10-02-Blog-开通啦.md
+++ b/_posts/2018-10-02-Blog-开通啦.md
@@ -5,15 +5,12 @@ subtitle:    与国同庆git开博
 date:        2018-10-01
 author:      yxy
 header-img:  img/post-bg-gate.jpg
-catalog: true
+catalog: false
 tags:
  - daily
  - test
 ---
 
-
-
-# First Post
 
 三十而立，与国同庆，即兴开博，继往开来。
 
