--- a/_posts/2018-10-02-Blog-开通啦.md
+++ b/_posts/2018-10-02-Blog-开通啦.md
@@ -16,7 +16,7 @@ tags:
 
 暂时搭了个框架，没有时间打磨细节，还未完成的事情如下（TODO）：
 
-- [x] 网站的icon还没改
+- [x] ~~网站的icon还没改~~
 - [ ] 学术成果没列好
 - [ ] 有生以来的demos要上到u2b上，再搬到blog上加以说明
 - [ ] 毕业后部分code也可以考虑开源了
