--- a/_posts/2018-10-02-Blog-开通啦.md
+++ b/_posts/2018-10-02-Blog-开通啦.md
@@ -4,7 +4,7 @@ title:       Blog开通惹
 subtitle:    与国同庆git开博
 date:        2018-10-01
 author:      yxy
-header-img:  img/post-bg-gate.jpg
+header-img:  img/post-bg-guoqing.jpg
 catalog: false
 tags:
  - daily
@@ -16,12 +16,14 @@ tags:
 
 暂时搭了个框架，没有时间打磨细节，还未完成的事情如下（TODO）：
 
-- [x] ~~网站的icon还没改~~
-- [ ] 学术成果没列好
+- [x] ~~网站的icon还没改~~ 
+- [x] ~~学术成果没列好~~ 2018-10-7 updated
 - [ ] 有生以来的demos要上到u2b上，再搬到blog上加以说明
-- [ ] 毕业后部分code也可以考虑开源了
-- [ ] 部分素材图片要替换成和自己相关的，图片压缩和处理还要学习。
-- [ ] Main activities, eg, ASME, WAIC should be added.
+- [ ] 毕业后部分code也可以考虑开源了。
+	  目前给自己的git 设了2年edu期限，到时自动转为开源
+- [x] ~~部分素材图片要替换成和自己相关的，图片压缩和处理还要学习。~~
+      <font color =blue>下载了 Riot 极其好用。2018-10-7 updated</font>
+- [ ] Main activities, eg, ASME, WAIC should be loged.
 - [ ] English Version should be added.
 
 To be continued...
