--- a/_posts/2018-10-07-Latex中文简历教程.md
+++ b/_posts/2018-10-07-Latex中文简历教程.md
@@ -5,7 +5,7 @@ subtitle:    《Latex 从入门到放弃》系列一
 date:        2018-10-07
 author:      yxy
 header-img:  img/post-bg-glass.jpg
-catalog: false
+catalog: true
 tags:
  - daily
  - tool
