--- a/_posts/2018-10-02-Blog-开通啦.md
+++ b/_posts/2018-10-02-Blog-开通啦.md
@@ -17,15 +17,12 @@ tags:
 暂时搭了个框架，没有时间打磨细节，还未完成的事情如下（TODO）：
 
 - [x] ~~网站的icon还没改~~ 
-- [x] ~~学术成果没列好~~ <br>
-      2018-10-7 updated
+- [x] ~~学术成果没列好~~ 2018-10-7 updated
 - [ ] 有生以来的demos要上到u2b上，再搬到blog上加以说明
-- [ ] 毕业后部分code也可以考虑开源了。<br>
-	目前给自己的git 设了2年edu期限，到时自动转为开源
+- [ ] 毕业后部分 private repo 也可以考虑开源了。
 - [x] ~~部分素材图片要替换成和自己相关的，图片压缩和处理还要学习。~~<br>
-      下载了 Riot 极其好用。2018-10-7 updated
-	
-- [ ] Main activities, eg, ASME, WAIC should be loged.
+      solution: 下载了 Riot 极其好用。2018-10-7 updated	
+- [ ] Main activities, eg, ASME, WAIC should be logged.
 - [ ] English Version should be added.
 
 To be continued...
