--- a/_posts/2018-10-07-Latex中文简历教程.md
+++ b/_posts/2018-10-07-Latex中文简历教程.md
@@ -19,7 +19,7 @@ tags:
 
 ![](img/post-fig-vague.png)
 
-# 1\. 获得一个改造的基础模板
+# 1 获得一个改造的基础模板
 
 ## 1.1 在哪里找模板
 
@@ -30,8 +30,6 @@ tags:
 
 - texlive 2017 -
 
-# 2\. Chinese settings in .tex file
+# 2 改造之前需要包含的 tex packages
 
-# 3\. Two Examples (福利在这)
-
-2018-10-7 updated To be continued... Promise come back after 组会...
+# 3 字体改造
