--- a/_posts/2018-10-07-Latex中文简历教程.md
+++ b/_posts/2018-10-07-Latex中文简历教程.md
@@ -36,7 +36,7 @@ tags:
 
 在latex宏定义的部分插入
 
-```tex
+```latex
 \usepackage{xeCJK}
 \usepackage{fontspec}
 ```
@@ -49,7 +49,7 @@ tags:
 
 改造前：
 
-```
+```latex
 % font families
 \defaultfontfeatures{Ligatures=TeX}
 \newfontfamily{\cvnamefont}{Roboto Medium}
@@ -62,7 +62,7 @@ tags:
 
 改造后：
 
-```
+```latex
 \defaultfontfeatures{Ligatures=TeX}
 %注意此时尽管下面重定义了字体，写作时仍然需要使用自定义命令实现字体
 \newfontfamily\kai{STKaiti.ttf}          % 楷体
@@ -78,7 +78,7 @@ tags:
 
 写作使用：
 
-```
+```latex
 \cvpersonalinfo{
     % photo
     \includegraphics[height=43mm]{fig/myphoto.jpg}
