--- a/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
+++ b/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
@@ -17,7 +17,11 @@ tags:
 
 # 模板编译问题
 
+## 官方模板中 .eps 或 .ps 图片编译报错问题
+
 # Figure
+
+- 双栏中占用半栏用 `\begin{Figure}`,占用两栏用`\begin{Figure*}`
 
 # Citation
 
