--- a/_posts/2018-10-07-Latex中文简历教程.md
+++ b/_posts/2018-10-07-Latex中文简历教程.md
@@ -13,7 +13,7 @@ tags:
   - skill
 ---
 
-> YXY 小韭菜最近在找工作中，在国内搬砖只得做中文简历，所以看到好看的 en-template 比如 awesome template 是不能用的了。但是如果学会把 en-template 改造成 ch-template 岂不妙哉。于是本文记录下改造的过程及效果。
+> 阿九最近在找工作中，在国内搬砖只得做中文简历，所以看到好看的 en-template 比如 awesome template 是不能用的了。但是如果学会把 en-template 改造成 ch-template 岂不妙哉。于是本文记录下改造的过程及效果。
 
 # 效果预览
 
