--- a/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
+++ b/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
@@ -13,18 +13,18 @@ tags:
   - skill
 ---
 
-> 记录本韭菜投过的 Emrald、IEEE、ASME、Elsevier、Spring、SPIE 的 tex 模板调试过程中的问题
+> 记录阿九投过的 Emrald、IEEE、ASME、Elsevier、Spring、SPIE 的 tex 写作过程中的报错问题，全部附有解决方案。
 
-# 模板编译问题
 
-## 官方模板中 .eps 或 .ps 图片编译报错问题
+# 官方模板中 .eps 或 .ps 图片编译报错问题
+SPIE 和 ASME 提供的模板中都有.ps格式图片，但是直接编译会产生报错：
 
-# Figure
+# 编译bibtex报错的问题
 
-- 双栏中占用半栏用 `\begin{Figure}`,占用两栏用`\begin{Figure*}`
+引用期刊中带有 `&` 的杂志，如 "IEEE TRANS ON PATTERN ANALYSIS & MACHINE INTELLIGENCE"(TPAMI)、“COMPUTERS & GRAPHICS”(CG) 需要在.bbl中把`&`手动改成 `\&`.
 
-# Citation
 
-# Table
+# 公式对齐的问题
+公式对齐 align 的问题（待补充）
 
-# Equation
+# Springer期刊投稿通讯作者、作者单位的问题
