--- a/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
+++ b/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
@@ -28,3 +28,43 @@ SPIE 和 ASME 提供的模板中都有.ps格式图片，但是直接编译会产
 公式对齐 align 的问题（待补充）
 
 # Springer期刊投稿通讯作者、作者单位的问题
+Springer模板中没有提供区分作者单位和通信作者的代码，参考最新的排版效果：
+
+![](https://pt.sjtu.edu.cn/picbucket/95136_154744228829.jpg)
+
+我自己写了一份，源码及使用宏包如下：
+
+```latex
+\usepackage[misc]{ifsym}
+
+\author{XY Yin \textsuperscript{1}     \and
+        Boss Fan  \textsuperscript{1,*} \and
+        Xu Yang \textsuperscript{1}  \and
+        Shiguang Qiu\textsuperscript{2}
+}
+
+\institute{
+\Letter Boss Fan\\
+\email{fan@sjtu.edu.cn}\\     
+Tel.: +86-21-34206291\\     
+\at
+ {1} Institute of Intelligent Manufacturing and Information Engineering, Shanghai Jiao Tong University, Shanghai, 200240, China.
+ \at
+ {2} Chengdu Aircraft Industry (Group) Co. Ltd. of AVIC, Chengdu, 610092, China.\\
+}
+```
+
+效果如下：
+![](https://pt.sjtu.edu.cn/picbucket/95136_154744275798.jpg)
+
+![](https://pt.sjtu.edu.cn/picbucket/95136_154744278495.jpg)
+
+
+# Latex 转 mathtype 公式的问题
+大论文要求用 `Word` 写，简直是无力。不能自动排号，不能focus on content，不能实时编译出美观的 PDF，公式，伪代码。学校不能与时俱进一下吗？吐槽归吐槽，还是乖乖想办法吧。
+折腾过 `Pandoc` 和 `Aurora` 之后发现转换的tex公式都是 Word2016 内置公式编辑器格式的，显然通不过评审。只好重新折腾 `mathtype` 找办法。
+
+解决方案如下：
+打开 mathtype -> preferences -> Workspace preference 拉到底 -> √ Allow tex language entry from keyboard
+
+之后就可以从latex 文件中愉快地 copy paste equations 啦：
