--- a/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
+++ b/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
@@ -61,10 +61,12 @@ Tel.: +86-21-34206291\\
 
 
 # Latex 转 mathtype 公式的问题
-大论文要求用 `Word` 写，简直是无力。不能自动排号，不能focus on content，不能实时编译出美观的 PDF，公式，伪代码。学校不能与时俱进一下吗？吐槽归吐槽，还是乖乖想办法吧。
-折腾过 `Pandoc` 和 `Aurora` 之后发现转换的tex公式都是 Word2016 内置公式编辑器格式的，显然通不过评审。只好重新折腾 `mathtype` 找办法。
+大论文要求用 `Word` 写，简直是无力。不能写注释，不能自动排号，不能focus on content，不能实时编译出美观的 PDF，公式，伪代码。学校不能与时俱进一下吗？吐槽归吐槽，还是乖乖想办法吧。
+折腾过 `Pandoc` 和 `Aurora` 之后发现**转换的tex公式都是 Word2016 内置公式编辑器格式**，显然通不过评审。只好重新折腾 `mathtype` 找办法。
 
 解决方案如下：
 打开 mathtype -> preferences -> Workspace preference 拉到底 -> √ Allow tex language entry from keyboard
 
 之后就可以从latex 文件中愉快地 copy paste equations 啦：
+
+![](https://pt.sjtu.edu.cn/picbucket/95136_154744934820.jpg)
