--- a/_posts/2018-10-07-Latex中文简历教程.md
+++ b/_posts/2018-10-07-Latex中文简历教程.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 怎样用 Latex 做中文简历
+title: 怎样用 Latex 做中文简历（完结）
 subtitle: 《Latex 从入门到放弃》系列一
 date: 2018-10-07T00:00:00.000Z
 author: yxy
