--- a/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
+++ b/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
@@ -54,7 +54,9 @@ SPIE 和 ASME 提供的模板中都有.ps格式图片，但是直接编译会产
 
 # 公式对齐的问题
 
-当需要做连续公式推导的时候，通常使用对齐功能，并且排版只显示一个公式编号。如： ![](https://pt.sjtu.edu.cn/picbucket/95136_154763978918.png)
+当需要做连续公式推导的时候，通常使用对齐功能，并且排版只显示一个公式编号,此时用 `\begin{equation}` 和 `\begin{aligned}` 共同实现。如：
+
+![](https://pt.sjtu.edu.cn/picbucket/95136_154763978918.png)
 
 代码：
 
@@ -70,7 +72,7 @@ SPIE 和 ASME 提供的模板中都有.ps格式图片，但是直接编译会产
 \end{equation}
 ```
 
-如果需要对每一步推导公式连续编号，则效果和代码如下：
+如果需要对每一步推导公式连续编号，应直接使用 `\begin{align}`,效果和代码如下：
 
 ![](https://pt.sjtu.edu.cn/picbucket/95136_154763995310.png)
 
@@ -128,7 +130,7 @@ Tel.: +86-21-34206291\\
 
 # 双栏论文跨栏图像的排版方法
 
-直接上代码，懒得画图了，谁用谁知道。
+直接上代码，懒得画图了，谁用谁知道。用 `*` 实现
 
 ```latex
 \begin{figure*}[ht] %\*实现跨栏的功能，表格同理。
@@ -142,7 +144,7 @@ Tel.: +86-21-34206291\\
 
 # 单栏图、表的固定方法
 
-直接上代码，懒得画图了，谁用谁知道。用 [H] 实现。
+直接上代码，懒得画图了，谁用谁知道。用 `[H]` 实现。
 
 ```latex
 %图固定
@@ -179,7 +181,7 @@ Caption of the figure. }
 
 # 双栏论文跨栏图片固定的方法
 
-直接上代码，懒得画图了，谁用谁知道。跨栏不能用[H],会报错，取而代之的用[!htb]将图片强制固定在当前页面。
+直接上代码，懒得画图了，谁用谁知道。跨栏不能用 `[H]`,会报错，取而代之的用 `[!htb]` 将图片强制固定在当前页面。
 
 ```latex
 \begin{figure*}[!htb]
