--- a/_posts/2019-01-13-Latex期刊、会议排版通用教程.md
+++ b/_posts/2019-01-13-Latex期刊、会议排版通用教程.md
@@ -38,12 +38,14 @@ tags:
 各个期刊的章节和致谢构造是一样的，改投的时候直接粘过来就行了。代码：
 
 ```latex
-\section{Introduction}
+\section{Introduction} %Section 1
 \label{sec:intro}
 Your text comes here.
-\section{Related work}
+
+\section{Related work} %自动排成 Section 2
 \label{sec:rw}
-\subsection{Subsection title}
+
+\subsection{Subsection title} %自动排成 Subsection
 \label{sec:sub1}
 Here's an example of section citation (see Section.~\ref{sec:intro}).
 
@@ -56,14 +58,56 @@ If you'd like to thank anyone.
 
 ![](https://pt.sjtu.edu.cn/picbucket/95136_154752553572.png)
 
-# Single Figure
+# Single Figure 单图
 
-# Multi Figures
+```latex
+\begin{figure}[H]
+\label{fig:example}
+\centering
+\includegraphics[height=5.5cm]{fig/example.jpg}
+\caption{Figure title.}
+\end{figure}
+```
 
-# Equations
+caption 和 label也可以独立开来写。
 
-# Tables
+~~此处应有图，不过太懒了，不保证会更新~~
 
-# Algorithms(Psyudocode)
+# Multi Figures 多图
 
-# References of all types of materials
+```latex
+\begin{figure}[th]
+\centering
+\subfigure[Title]{\includegraphics[height=3cm]{imgFilePath}}
+%用\\控制换行；按照版面宽度设置height 或 width，算好要插入图的数量，之后自己计算size。
+\caption{Assembly process simulation}
+\label{fig:SimpleBright}
+\end{figure}
+```
+
+~~此处应有图，不过太懒了，不保证会更新~~
+
+# Equations 公式
+
+latex 使用 [MathJax](http://meta.math.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference) 语法, 特殊字符的代码可以通过在 [detexify](http://detexify.kirelabs.org/classify.html) 手写识别获得。 公式主体部分代码如下：
+
+```latex
+\begin{equation}
+\label{eq:eqlabel}
+\end{equation}
+```
+
+值得注意的是：
+
+- 数域的表示用空心字体 `\mathbb{R}` $\mathbb{R}$
+- 向量、矩阵用粗体字 `\mathbf{p}` $\mathbf{p}$
+- 图像、数据、集合用手写体，如： `\mathcal{I}` $\mathcal{I}$
+- 非变量脚注，描述意义的脚注，用正体而非默认的斜体。如 camera 捕获的图像 $\mathcal{I}$ 记为 `\mathcal{I}_mathrm{c}` $\mathcal{I}_mathrm{c}$
+
+~~此处应有图，不过太懒了，不保证会更新~~
+
+# Tables 表格
+
+# Algorithms(Psyudocode) 伪代码
+
+# References of all types of materials 在文章内引用并超链上述素材
