--- a/_posts/2019-01-13-Latex期刊、会议排版通用教程.md
+++ b/_posts/2019-01-13-Latex期刊、会议排版通用教程.md
@@ -102,7 +102,7 @@ latex 使用 [MathJax](http://meta.math.stackexchange.com/questions/5020/mathjax
 - 数域的表示用空心字体 `\mathbb{R}` $\mathbb{R}$
 - 向量、矩阵用粗体字 `\mathbf{p}` $\mathbf{p}$
 - 图像、数据、集合用手写体，如： `\mathcal{I}` $\mathcal{I}$
-- 非变量脚注，描述意义的脚注，用正体而非默认的斜体。如 camera 捕获的图像 $\mathcal{I}$ 记为 `\mathcal{I}_mathrm{c}` $\mathcal{I}_mathrm{c}$
+- 非变量脚注，描述意义的脚注，用正体而非默认的斜体。如 camera 捕获的图像 $\mathcal{I}$ 记为 `\mathcal{I}_mathrm{c}` $\mathcal{I}_\mathrm{c}$
 
 ~~此处应有图，不过太懒了，不保证会更新~~
 
