先更新一波

--- a/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
+++ b/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 幺蛾子集锦：Latex 写期刊论文时的常见报错
+title: 幺蛾子集锦：Latex 写期刊论文时的常见报错(持续更新)
 subtitle: 《Latex 从入门到放弃》系列二
 date: 2018-12-22T16:00:00.000Z
 author: yxy
@@ -13,7 +13,7 @@ tags:
   - skill
 ---
 
-> 记录阿九投过的 Emrald、IEEE、ASME、Elsevier、Spring、SPIE 的 tex 写作过程中的报错问题，全部附有解决方案。
+> 记录我投过的 Emrald、IEEE、ASME、Elsevier、Spring、SPIE 的 tex 写作过程中的报错问题，全部附有解决方案。
 
 # 官方模板中 .eps 或 .ps 图片编译报错问题
 
