--- a/_posts/2019-01-13-Latex期刊、会议排版通用教程.md
+++ b/_posts/2019-01-13-Latex期刊、会议排版通用教程.md
@@ -17,7 +17,7 @@ tags:
 
 # Hyperref
 
-阿九最喜欢的一个功能，放到前面！超链一时爽，一直用一直爽~~ code:
+最喜欢的一个功能，放到前面！超链一时爽，一直用一直爽~~ code:
 
 ```latex
 \usepackage{hyperref}
@@ -108,6 +108,9 @@ latex 使用 [MathJax](http://meta.math.stackexchange.com/questions/5020/mathjax
 
 # Tables 表格
 
-# Algorithms(Psyudocode) 伪代码
+# Algorithms(Psyudocode) 伪代码(2021年1月26日更新)
+## 纯英文 algorithm+algorithmc
+## 中文伪代码 algorithm+algorithmc+ctex
+## Word Aurora嵌入伪代码（仅英文，无法使用ctex）
 
 # References of all types of materials 在文章内引用并超链上述素材
