--- a/_posts/2019-01-13-Latex期刊、会议排版通用教程.md
+++ b/_posts/2019-01-13-Latex期刊、会议排版通用教程.md
@@ -13,7 +13,7 @@ tags:
   - skill
 ---
 
-> 作为 coder 和 phD candidate, 阿九的 Markdown和tex是不离手的。除非甲方硬要word文档，否则一律 M/T 解决。各出版社期刊会议提供的原始模板中包含的封面图案等不必赘述，本文记录排版中涉及到的图、表格、文献引用、伪代码、公式中的工具。Blog持续更新，作为 thesis writing 过程中的减压方式吧。
+> 作为 coder 和 phD candidate, Markdown和tex是基本操作。除非甲方硬要word文档，否则一律 .md/.tex 解决。各出版社期刊会议提供的原始模板中包含的封面图案等不必赘述，本文记录排版中涉及到的图、表格、文献引用、伪代码、公式中的工具。Blog持续更新，作为 thesis writing 过程中的减压方式吧。
 
 # Hyperref
 
