Remove amount of personal information

--- a/_posts/2018-10-07-Latex中文简历教程.md
+++ b/_posts/2018-10-07-Latex中文简历教程.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 怎样用 Latex 做中文简历（完结）
-subtitle: 《Latex 从入门到放弃》系列一
+title: How to Make a Chinese Resume with LaTeX (Final)
+subtitle: Series 1 of "LaTeX: From Getting Started to Giving Up"
 date: 2018-10-07T00:00:00.000Z
 author: yxy
 header-img: img/post-bg-glass.jpg
@@ -11,41 +11,41 @@ tags:
   - skill
 ---
 
-> 最近在找工作，在国内搬砖只得做中文简历，所以看到好看的 en-template 比如 awesome template 是不能用的了。但是如果学会把 en-template 改造成 ch-template 岂不妙哉。于是本文记录下改造的过程及效果。
+> I've been job hunting recently. Since I'm looking for a job in China, I need to make a Chinese resume. So those nice English templates like the awesome template can't be used directly. But wouldn't it be great if I could learn to transform an English template into a Chinese one? Therefore, this article records the transformation process and the final effect.
 
-# 效果预览
+# Effect Preview
 
 ![](/img/post-fig-vague.png)
 
-# 1 获得一个改造的基础模板
+# 1 Obtain a Basic Template for Transformation
 
-## 1.1 在哪里找模板
+## 1.1 Where to Find Templates
 
 1. [Latex Templates](http://www.latextemplates.com/)
-2. [overleaf](https://www.overleaf.com/gallery/tagged/cv) （最近和OverLeaf合并了。由于我用惯了 texlive，暂时不使用Overleaf,后面会考虑使用Atom.）
-3. 以一个有照片的为例，我用了[这个模板](https://www.overleaf.com/latex/templates/1-dot-5-column-cv/rpcbqtrsgbxm),初始效果如下： ![](https://429d5421843ead24b185-b347df14968347461fc7265222280b54.ssl.cf5.rackcdn.com/gallery-images/6e08cc48d800e2a5108a7d9893d959bb584f20f0.jpeg)
+2. [overleaf](https://www.overleaf.com/gallery/tagged/cv) (It merged with OverLeaf recently. Since I'm used to TeX Live, I won't use Overleaf for now, but I'll consider using Atom later.)
+3. Taking a template with a photo as an example, I used [this template](https://www.overleaf.com/latex/templates/1-dot-5-column-cv/rpcbqtrsgbxm). The initial effect is as follows: ![](https://429d5421843ead24b185-b347df14968347461fc7265222280b54.ssl.cf5.rackcdn.com/gallery-images/6e08cc48d800e2a5108a7d9893d959bb584f20f0.jpeg)
 
-## 1.2 编译模板的准备
+## 1.2 Preparation for Compiling the Template
 
-- texlive 2017
-- 编译，直到看到效果,这里应该没什么问题。
+- TeX Live 2017
+- Compile until you see the effect. There shouldn't be any problems here.
 
-# 2 改造之前需要包含的 tex packages
+# 2 Necessary TeX Packages to Include Before Transformation
 
-在latex宏定义的部分插入
+Insert the following in the LaTeX macro definition section:
 
 ```latex
 \usepackage{xeCJK}
 \usepackage{fontspec}
 ```
 
-之后就可以编译出中文字体啦 但是这时候中文的title全部是tex的默认字体，所以还要改造。
+After that, you can compile Chinese fonts. However, at this point, all Chinese titles will use LaTeX's default font, so further modification is needed.
 
-# 3 字体改造
+# 3 Font Transformation
 
-这里我只做了字体改造，没有改造颜色，崇尚**极简**和**断舍离**。
+Here, I only modified the fonts without changing the colors, advocating **minimalism** and **decluttering**.
 
-改造前：
+Before transformation:
 
 ```latex
 % font families
@@ -58,23 +58,23 @@ tags:
 \setmainfont{Roboto Light}
 ```
 
-改造后：
+After transformation:
 
 ```latex
 \defaultfontfeatures{Ligatures=TeX}
-%注意此时尽管下面重定义了字体，写作时仍然需要使用自定义命令实现字体
-\newfontfamily\kai{STKaiti.ttf}          % 楷体
-\newfontfamily\hei{SimHei}           % 黑体
-%重定义字体
-\newfontfamily\cvnamefont[BoldFont]{STKaiti} %姓名
+% Note that even though the fonts are redefined below, you still need to use custom commands when writing to apply the fonts
+\newfontfamily\kai{STKaiti.ttf}          % KaiTi (regular script)
+\newfontfamily\hei{SimHei}           % SimHei (boldface)
+% Redefine fonts
+\newfontfamily\cvnamefont[BoldFont]{STKaiti} % For name
 \newfontfamily\cvsectionfont[BoldFont]{STKaiti}
 \newfontfamily\cvtitlefont[ItalicFont]{SimHei}
-\newfontfamily\cvdurationfont{Times New Roman} %数字用经典的
+\newfontfamily\cvdurationfont{Times New Roman} % Use the classic font for numbers
 \newfontfamily\cvheadingfont[BoldFont]{SimSun}
 \setmainfont{Times New Roman}
 ```
 
-写作使用：
+Usage in writing:
 
 ```latex
 \cvpersonalinfo{
@@ -82,10 +82,9 @@ tags:
     \includegraphics[height=43mm]{fig/myphoto.jpg}
 }{
     % name
-   \cvname{\textbf {\kai {韭菜}}} %注意这里的 \kai 命令，就是要使用非系统默认字体时，需要自用命令了
-
+   \cvname{\textbf {\kai {Jiucai}}} % Note the \kai command here; when you need to use a non-system default font, you have to use a custom command
     }
 }
 ```
 
-替换好字体之后，就可以愉快地注水了。祝看帖的人拿到offer。
+After replacing the fonts, you can happily enrich the content. Wish everyone who reads this post can get an offer.
