--- a/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
+++ b/_posts/2018-12-21-Latex写期刊论文中的问题集锦.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 幺蛾子集锦：Latex 写期刊论文时的常见报错(持续更新)
-subtitle: 《Latex 从入门到放弃》系列二
+title: A Collection of Troubles: Common Errors When Writing Journal Papers with LaTeX (Continuously Updated)
+subtitle: Series 2 of "LaTeX: From Getting Started to Giving Up"
 date: 2018-12-22T16:00:00.000Z
 author: yxy
 header-img: img/post-bg-clock.jpg
@@ -13,13 +13,13 @@ tags:
   - skill
 ---
 
-> 记录我投过的 Emrald、IEEE、ASME、Elsevier、Spring、SPIE 的 tex 写作过程中的报错问题，全部附有解决方案。
+> This records the error issues encountered during the TeX writing process for journals I have submitted to, including Emerald, IEEE, ASME, Elsevier, Springer, and SPIE, all with attached solutions.
 
-# 官方模板中 .eps 或 .ps 图片编译报错问题
+# Compilation Error Issues with .eps or .ps Images in Official Templates
 
-SPIE 和 ASME 提供的模板中都有.ps格式图片，但是直接编译会产生报错：
+Both SPIE and ASME provide templates containing .ps format images, but direct compilation will result in errors:
 
-原图片代码：
+Original image code:
 
 ```latex
 \begin{figure}
@@ -29,13 +29,13 @@ SPIE 和 ASME 提供的模板中都有.ps格式图片，但是直接编译会产
 \end{figure}
 ```
 
-报错：
+Error message:
 
 ![](https://pt.sjtu.edu.cn/picbucket/95136_154764087389.png)
 
-解决方案： 增加关于ps转pdf的宏包后，在figure路径前面增加`\psfig`
+Solution: Add packages for converting ps to pdf, then add `\psfig` before the figure path.
 
-解决代码：
+Corrected code:
 
 ```latex
 \usepackage{epsfig}
@@ -48,17 +48,17 @@ SPIE 和 ASME 提供的模板中都有.ps格式图片，但是直接编译会产
 \end{figure}
 ```
 
-# 编译bibtex报错的问题
+# BibTeX Compilation Error Issues
 
-.tex或.bbl引用期刊中带有 `&` 字符时会报警，如 "IEEE TRANS ON PATTERN ANALYSIS & MACHINE INTELLIGENCE"(TPAMI)、"COMPUTERS & GRAPHICS"(CG)。 需要在.bbl中把`&`手动改成 `\&`，报错解决。
+When .tex or .bbl files reference journals containing the `&` character, a warning will be triggered, such as "IEEE TRANS ON PATTERN ANALYSIS & MACHINE INTELLIGENCE" (TPAMI) and "COMPUTERS & GRAPHICS" (CG). You need to manually change `&` to `\&` in the .bbl file to resolve the error.
 
-# 公式对齐的问题
+# Equation Alignment Issues
 
-当需要做连续公式推导的时候，通常使用对齐功能，并且排版只显示一个公式编号,此时用 `\begin{equation}` 和 `\begin{aligned}` 共同实现。如：
+When needing to perform continuous equation derivations, alignment functions are usually used, and only one equation number is displayed in the typesetting. At this time, `\begin{equation}` and `\begin{aligned}` are used together. For example:
 
 ![](https://pt.sjtu.edu.cn/picbucket/95136_154763978918.png)
 
-代码：
+Code:
 
 ```latex
 \begin{equation}
@@ -72,7 +72,7 @@ SPIE 和 ASME 提供的模板中都有.ps格式图片，但是直接编译会产
 \end{equation}
 ```
 
-如果需要对每一步推导公式连续编号，应直接使用 `\begin{align}`,效果和代码如下：
+If you need to number each step of the derived equations consecutively, you should directly use `\begin{align}`. The effect and code are as follows:
 
 ![](https://pt.sjtu.edu.cn/picbucket/95136_154763995310.png)
 
@@ -86,13 +86,13 @@ SPIE 和 ASME 提供的模板中都有.ps格式图片，但是直接编译会产
 \end{align}
 ```
 
-# Springer期刊投稿通讯作者、作者单位的问题
+# Issues with Corresponding Author and Affiliation in Springer Journal Submissions
 
-Springer模板中没有提供区分作者单位和通信作者的代码，参考最新的排版效果：
+The Springer template does not provide code to distinguish between author affiliations and corresponding authors. Referring to the latest typesetting effect:
 
 ![](https://pt.sjtu.edu.cn/picbucket/95136_154744228829.jpg)
 
-我自己写了一份，源码及使用宏包如下：
+I wrote a version myself, with the source code and used packages as follows:
 
 ```latex
 \usepackage[misc]{ifsym}
@@ -114,26 +114,26 @@ Tel.: +86-21-34206291\\
 }
 ```
 
-效果如下： ![](https://pt.sjtu.edu.cn/picbucket/95136_154744275798.jpg)
+The effect is as follows: ![](https://pt.sjtu.edu.cn/picbucket/95136_154744275798.jpg)
 
 ![](https://pt.sjtu.edu.cn/picbucket/95136_154744278495.jpg)
 
-# Latex 转 mathtype 公式的问题
+# Issue of Converting LaTeX Equations to MathType
 
-大论文要求用 `Word` 写，简直是无力。不能写注释，不能自动排号，不能focus on content，不能实时编译出美观的 PDF，公式，伪代码。学校不能与时俱进一下吗？吐槽归吐槽，还是乖乖想办法吧。 折腾过 `Pandoc` 和 `Aurora` 之后发现**转换的tex公式都是 Word2016 内置公式编辑器格式**，显然通不过评审。只好重新折腾 `mathtype` 找办法。
+The thesis requires writing in `Word`, which is really frustrating. You can't write comments, can't automatically number, can't focus on content, can't compile beautiful PDFs in real-time, and dealing with equations and pseudocode is a hassle. Can't the school keep up with the times? Complaints aside, I still have to find a way. After struggling with `Pandoc` and `Aurora`, I found that **the converted TeX equations are all in the format of Word 2016's built-in equation editor**, which obviously can't pass the review. I had to struggle again with `MathType` to find a solution.
 
-解决方案如下： 打开 mathtype -> preferences -> Workspace preference 拉到底 -> √ Allow tex language entry from keyboard
+The solution is as follows: Open MathType -> Preferences -> Workspace Preferences, scroll to the bottom -> Check √ "Allow TeX language entry from keyboard".
 
-之后就可以从latex 文件中愉快地 copy paste equations 啦：
+After that, you can happily copy and paste equations from the LaTeX file:
 
 ![](https://pt.sjtu.edu.cn/picbucket/95136_154744934820.jpg)
 
-# 双栏论文跨栏图像的排版方法
+# Typesetting Method for Cross-Column Images in Two-Column Papers
 
-直接上代码，懒得画图了，谁用谁知道。用 `*` 实现
+Here's the code directly; no need for diagrams. Those who use it will know. Use `*` to achieve this.
 
 ```latex
-\begin{figure*}[ht] %\*实现跨栏的功能，表格同理。
+\begin{figure*}[ht] % The *实现跨栏的功能 (asterisk realizes the cross-column function); the same applies to tables.
 \begin{center}
 \begin{tabular}{c}
 \includegraphics[width=16cm]{Graphicalabstract.jpg}
@@ -142,13 +142,13 @@ Tel.: +86-21-34206291\\
 \end{figure*}
 ```
 
-# 单栏图、表的固定方法
+# Method to Fix Single-Column Figures and Tables
 
-直接上代码，懒得画图了，谁用谁知道。用 `[H]` 实现。
+Here's the code directly; no need for diagrams. Those who use it will know. Use `[H]` to achieve this.
 
 ```latex
-%图固定
-\begin{figure}[H] %用[H]实现
+% Fixing a figure
+\begin{figure}[H] % Achieved with [H]
 \begin{center}
 \begin{tabular}{c}
 \includegraphics[width=7cm]{fig.png}
@@ -159,9 +159,9 @@ Tel.: +86-21-34206291\\
 Caption of the figure. }
 \end{figure}
 
-%表格固定
+% Fixing a table
 \begin{table}[H]
-\caption{\label{tab:tablabel}Cation of the table.}
+\caption{\label{tab:tablabel}Caption of the table.}
 \centering    
 \begin{tabular}{|l|l|}
 \hline
@@ -179,9 +179,9 @@ Caption of the figure. }
 \end{table}
 ```
 
-# 双栏论文跨栏图片固定的方法
+# Method to Fix Cross-Column Images in Two-Column Papers
 
-直接上代码，懒得画图了，谁用谁知道。跨栏不能用 `[H]`,会报错，取而代之的用 `[!htb]` 将图片强制固定在当前页面。
+Here's the code directly; no need for diagrams. Those who use it will know. Cross-column figures cannot use `[H]` as it will cause errors. Instead, use `[!htb]` to force the image to be fixed on the current page.
 
 ```latex
 \begin{figure*}[!htb]
