--- a/_posts/2019-01-13-Latex期刊、会议排版通用教程.md
+++ b/_posts/2019-01-13-Latex期刊、会议排版通用教程.md
@@ -1,7 +1,6 @@
----
 layout: post
-title: 老母亲教程：Latex 期刊、会议排版通用教程
-subtitle: 《Latex 从入门到放弃》系列三
+title: A Motherly Guide: General Typesetting Tutorial for LaTeX Journals and Conferences
+subtitle: Series 3 of "LaTeX: From Getting Started to Giving Up"
 date: 2019-01-13T16:00:00.000Z
 author: yxy
 header-img: img/post-bg-coffee.jpg
@@ -13,11 +12,10 @@ tags:
   - skill
 ---
 
-> 作为 coder 和 phD candidate, Markdown和tex是基本操作。除非甲方硬要word文档，否则一律 .md/.tex 解决。各出版社期刊会议提供的原始模板中包含的封面图案等不必赘述，本文记录排版中涉及到的图、表格、文献引用、伪代码、公式中的工具。Blog持续更新，作为 thesis writing 过程中的减压方式吧。
+> As a coder and PhD candidate, Markdown and TeX are basic skills. Unless the client insists on Word documents, I always use .md/.tex to get things done. The original templates provided by various publishers for journals and conferences include cover patterns and other elements that go without saying. This article records the tools involved in typesetting figures, tables, literature citations, pseudocodes, and equations. This blog will be continuously updated, serving as a way to relieve stress during thesis writing.
 
 # Hyperref
-
-最喜欢的一个功能，放到前面！超链一时爽，一直用一直爽~~ code:
+My favorite feature, so I'll put it first! Hyperlinks are satisfying to use, and the more you use them, the more satisfying they are~~ Code:
 
 ```latex
 \usepackage{hyperref}
@@ -25,7 +23,7 @@ tags:
 \usepackage{xcolor}
 ```
 
-效果：
+Effect:
 
 ![](https://pt.sjtu.edu.cn/picbucket/95136_154752494908.png)
 
@@ -34,18 +32,17 @@ tags:
 ![](https://pt.sjtu.edu.cn/picbucket/95136_154752511482.png)
 
 # Sections & Subsections
-
-各个期刊的章节和致谢构造是一样的，改投的时候直接粘过来就行了。代码：
+The structure of sections, subsections, and acknowledgements is the same across different journals. You can directly copy them when submitting to another journal. Code:
 
 ```latex
-\section{Introduction} %Section 1
+\section{Introduction} % Section 1
 \label{sec:intro}
 Your text comes here.
 
-\section{Related work} %自动排成 Section 2
+\section{Related work} % Automatically formatted as Section 2
 \label{sec:rw}
 
-\subsection{Subsection title} %自动排成 Subsection
+\subsection{Subsection title} % Automatically formatted as Subsection
 \label{sec:sub1}
 Here's an example of section citation (see Section.~\ref{sec:intro}).
 
@@ -54,12 +51,11 @@ If you'd like to thank anyone.
 \end{acknowledgements}
 ```
 
-效果：
+Effect:
 
 ![](https://pt.sjtu.edu.cn/picbucket/95136_154752553572.png)
 
-# Single Figure 单图
-
+# Single Figure
 ```latex
 \begin{figure}[H]
 \label{fig:example}
@@ -69,27 +65,25 @@ If you'd like to thank anyone.
 \end{figure}
 ```
 
-caption 和 label也可以独立开来写。
+The caption and label can also be written separately.
 
-~~此处应有图，不过太懒了，不保证会更新~~
+~~There should be a figure here, but I'm too lazy, so no guarantee of an update~~
 
-# Multi Figures 多图
-
+# Multi Figures
 ```latex
 \begin{figure}[th]
 \centering
 \subfigure[Title]{\includegraphics[height=3cm]{imgFilePath}}
-%用\\控制换行；按照版面宽度设置height 或 width，算好要插入图的数量，之后自己计算size。
+% Use \\ to control line breaks; set height or width according to the layout width, calculate the number of figures to insert, and then compute the size yourself.
 \caption{Assembly process simulation}
 \label{fig:SimpleBright}
 \end{figure}
 ```
 
-~~此处应有图，不过太懒了，不保证会更新~~
+~~There should be a figure here, but I'm too lazy, so no guarantee of an update~~
 
-# Equations 公式
-
-latex 使用 [MathJax](http://meta.math.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference) 语法, 特殊字符的代码可以通过在 [detexify](http://detexify.kirelabs.org/classify.html) 手写识别获得。 公式主体部分代码如下：
+# Equations
+LaTeX uses [MathJax](http://meta.math.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference) syntax. Codes for special characters can be obtained through handwritten recognition on [detexify](http://detexify.kirelabs.org/classify.html). The code for the main part of an equation is as follows:
 
 ```latex
 \begin{equation}
@@ -97,20 +91,20 @@ latex 使用 [MathJax](http://meta.math.stackexchange.com/questions/5020/mathjax
 \end{equation}
 ```
 
-值得注意的是：
+It's worth noting that:
+- Number fields are represented using hollow fonts: `\mathbb{R}` $\mathbb{R}$
+- Vectors and matrices use bold fonts: `\mathbf{p}` $\mathbf{p}$
+- Images, data, and sets use script fonts, e.g.: `\mathcal{I}` $\mathcal{I}$
+- Non-variable subscripts that describe meanings should be in roman font instead of the default italic. For example, the image captured by a camera, $\mathcal{I}$, is written as `\mathcal{I}_\mathrm{c}` $\mathcal{I}_\mathrm{c}$
 
-- 数域的表示用空心字体 `\mathbb{R}` $\mathbb{R}$
-- 向量、矩阵用粗体字 `\mathbf{p}` $\mathbf{p}$
-- 图像、数据、集合用手写体，如： `\mathcal{I}` $\mathcal{I}$
-- 非变量脚注，描述意义的脚注，用正体而非默认的斜体。如 camera 捕获的图像 $\mathcal{I}$ 记为 `\mathcal{I}_mathrm{c}` $\mathcal{I}_\mathrm{c}$
+~~There should be a figure here, but I'm too lazy, so no guarantee of an update~~
 
-~~此处应有图，不过太懒了，不保证会更新~~
+# Tables
 
-# Tables 表格
+# Algorithms (Pseudocode) (Updated on January 26, 2021)
+## English-only: algorithm + algorithmic
+## Chinese pseudocode: algorithm + algorithmic + ctex
+## Embedding pseudocode in Word with Aurora (English-only, cannot use ctex)
 
-# Algorithms(Psyudocode) 伪代码(2021年1月26日更新)
-## 纯英文 algorithm+algorithmc
-## 中文伪代码 algorithm+algorithmc+ctex
-## Word Aurora嵌入伪代码（仅英文，无法使用ctex）
-
-# References of all types of materials 在文章内引用并超链上述素材
+# References of all types of materials
+Cite and hyperlink the above materials in the article
