--- a/_posts/2018-10-02-Blog-开通啦.md
+++ b/_posts/2018-10-02-Blog-开通啦.md
@@ -1,7 +1,7 @@
 ---
 layout:      post
-title:       开一个Blog Repo玩玩
-subtitle:    与国同庆git开博
+title:       Open my first blog Repo
+subtitle:    
 date:        2018-10-01
 author:      yxy
 header-img:  img/post-bg-guoqing.jpg
@@ -11,16 +11,8 @@ tags:
  - test
 ---
 
+On 2018 before my graduation year I build this page for job hunting, while after 7 year's working I decide to retreat for 5 years till 2030.
 
-暂时搭了个框架，没有时间打磨细节，还未完成的事情如下（TODO）：
-
-- [x] ~~网站的icon还没改~~
-- [x] ~~学术成果没列好~~ 2018-10-7 updated
-- [ ] 有生以来的demos要上到u2b上，再搬到blog上加以说明
-- [ ] 毕业后部分 private repo 也可以考虑开源了。
-- [x] ~~部分素材图片要替换成和自己相关的，图片压缩和处理还要学习。~~<br>
-      solution: 下载了 Riot 极其好用。2018-10-7 updated
-- [ ] Main activities, eg, ASME, WAIC should be logged.
-- [x] English Version should be added.(Foreign reader could use Google translation if intrested)
+So, see you 2030, and see if I have achieved my goal that time.
 
 To be continued...
